# django-logger

./: .pypirc  Makefile  README.md  boot_django.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
django_logger/: admin.py  handlers.py  middleware.py  models.py
django_logger/locale/ pl/LC_MESSAGES/: django.po
django_logger/migrations/: 0001_initial.py
django_logger/tests/models/: test_logrecord.py  test_remote_request_log.py
django_logger_project/django_logger_project/: settings.py
docs/source/: index.rst
