[metadata]
name = django_logger
version = 1.0
description = A Django app to log all exceptions, errors and user activity.
long_description = file: README.md
url = https://www.fearlessspider.com/
author = Przemysław Pająk
author_email = office@fearlessspider.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.x
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

python_requires = '>=3.6'

[options]
include_package_data = true
packages = django_logger
install_requires =
    Django>=3.0
setup_requires =
    setuptools_scm
    pytest-runner
tests_require =
    mock
    pytest
    pytest-cov
    pytest-django
test_suite = load_tests.get_suite

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[coverage:run]
source = .
omit =
  */migrations/*
  */tests/*
  */test_*.py
  .tox

[coverage:report]
show_missing = True

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = venv,.tox,.eggs

[pydocstyle]
add-ignore = D1

[isort]
atomic = true
line_length = 88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
known_first_party = measurement, tests
default_section=THIRDPARTY
combine_as_imports = true